[package]
name = "openapiv3"
version = "2.0.0"
authors = ["Glade Miller <glademiller@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["openapi", "v3"]
homepage = "https://github.com/glademiller/openapiv3"
repository = "https://github.com/glademiller/openapiv3"
description = "This crate provides data structures that represent the OpenAPI v3.0.x specification easily deserializable with serde."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0.0", features = ["serde"] }

[dev-dependencies]
newline-converter = "0.3.0"
serde_yaml = "0.9"

[features]
skip_serializing_defaults = []
